@@ -1,3 +1,10 @@
+2010-11-29 Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
+
+	* generic/tclBasic.c: Patch by Miguel, providing a
+	  [::tcl::unsupported::inject coroname command args], which prepends
+	  ("injects") arbitrary code to a suspented coro's future resumption.
+	  Neat for debugging complex coros without heavy instrumentation.
+
 2010-11-29  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tclInt.decls:
